Clarify the additive nature of the fork-options contract
State explicitly that the preserved arguments are those appended via
the additive `jvmArgs(...)` function or `jvmArgumentProviders`, while
assigning the `jvmArgs` property (`setJvmArgs(...)`) replaces the
defaults and is outside the contract.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>